<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/menu_brush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:button="@null"
        android:drawablePadding="6dp"
        android:drawableTop="@drawable/icon_brush"
        android:gravity="center_horizontal"
        android:text="@string/str_brush"
        android:textColor="@color/board_menu_text_color"
        android:textSize="12sp"/>

    <RadioButton
        android:id="@+id/menu_line_width"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:button="@null"
        android:drawablePadding="6dp"
        android:drawableTop="@drawable/icon_line_width"
        android:gravity="center_horizontal"
        android:text="@string/str_line_width"
        android:textColor="@color/board_menu_text_color"
        android:textSize="12sp"/>

    <RadioButton
        android:id="@+id/menu_straight_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:button="@null"
        android:drawablePadding="6dp"
        android:drawableTop="@drawable/icon_straight_line"
        android:gravity="center_horizontal"
        android:text="@string/str_straight_line"
        android:textColor="@color/board_menu_text_color"
        android:textSize="12sp"/>

    <RadioButton
        android:id="@+id/menu_eraser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:button="@null"
        android:drawablePadding="6dp"
        android:drawableTop="@drawable/icon_eraser"
        android:gravity="center_horizontal"
        android:text="@string/str_eraser"
        android:textColor="@color/board_menu_text_color"
        android:textSize="12sp"/>

    <RadioButton
        android:id="@+id/menu_paint_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:button="@null"
        android:drawablePadding="6dp"
        android:drawableTop="@drawable/icon_paint_color"
        android:gravity="center_horizontal"
        android:text="@string/str_change_color"
        android:textColor="@color/board_menu_text_color"
        android:textSize="12sp"/>
</LinearLayout>